# CI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  APP-TEST-STRUCTURE-VERIFICATION.md  CI-CD-GUIDE.md  CI-IMPROVEMENTS-SUMMARY.md  CI-OPTIMIZATION-SUMMARY.md  CI-TRIGGER-BEHAVIOR.md  CLEANUP-SUMMARY.md  COMPREHENSIVE-FIXES-SUMMARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-FIXES.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-NEXT-STEPS.md  DEPLOYMENT-STATE-ANALYSIS.md  DEPLOYMENT.md  DESTROY-CLEANUP-GUIDE.md  DOCKER-COMPOSE-ARCHITECTURE.md  DOCKER-COMPOSE-FILE-LOCATION.md  DOCKER-COMPOSE-STRUCTURE.md  DOCKER-IMPROVEMENTS.md  DOWNTIME-ANALYSIS.md  DYNAMIC-IMPROVEMENTS-SUMMARY.md  ECS-DEPLOYMENT-ISSUES-ANALYSIS.md  EDGE-CASES-AND-MITIGATIONS.md  EDGE-CASES-IMPLEMENTATION-SUMMARY.md  FLEXIBLE-MULTI-APP-IMPLEMENTATION.md  GENERATION-SCRIPT-GUIDE.md  HEALTH-CHECK-FIXES.md  IDEMPOTENCY-AUDIT.md  IMAGE-HANDLING-ANALYSIS.md  IMAGE-HANDLING-ISSUES.md  IMAGE-HANDLING-SUMMARY.md  IMAGE-HANDLING-VERIFICATION-COMPLETE.md  IMAGE-HANDLING-VERIFICATION.md  IMPLEMENTATION-COMPLETE.md  LINTING-GUIDE.md  LINTING-MODERNIZATION.md  LINTING-SETUP-SUMMARY.md  LOCAL-DEV-SETUP.md  (+37 more)
applications/test-app/backend/: .dockerignore  .gitkeep  .venv-quickstart  Dockerfile  Makefile  activate.sh  auth.py  config.py  database.py  env-example.txt  logging_config.py  main.py  middleware.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-security.txt  requirements.txt  ruff.toml  schemas.py  secrets.py  setup-venv.bat  setup-venv.sh
applications/test-app/backend/tests/: conftest.py  test_main.py  (+1 more)
(+162 files in other folders)
